data validation, weight attribute
