# cmd/api/main.go
@@ -38,6 +38,7 @@ func main() {
 	r.POST("/plans/:id/save", store.PostSaveHandler)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	r.POST("/plans", store.CreatePlanHandler)
+	r.GET("/radar/geojson", store.GetRadarGeoJSONHandler)
 
 	// 4. Start the Engine
 	log.Println("Radar API is live on http://localhost:8080")
